# generic-template

./: .editorconfig  .flake8  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .yamllint  CHANGELOG.md  Makefile  Pipfile  README.md  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  runway.yml  setup.cfg
.github/: dependabot.yml  labels.json  labels.yml  pr-labeler.yml  pull_request_template.md  release-drafter.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general-question.md
.github/PULL_REQUEST_TEMPLATE/: generic-pr.md
.github/workflows/: ci.yml  default.yaml  label-maker.yml  on-pr-target-opened.yml  on-pr.yaml  on-push.yaml  pr-management.yml  pull_request_target.yml  release-drafter.yml  release-management.yml  spell-check.yml  test.yaml
docs/: .gitignore  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt
docs/source/: __init__.py  changelog.md  conf.py  example_page.rst  index.rst
docs/source/_static/css/: rtd_dark.css
docs/source/developers/: branching_strategy.rst  documentation_style_guide.rst  gettings_started.rst
docs/source/pygment_styles/: __init__.py  one_dark.py
generic_template/: __init__.py
src/: __init__.py
tests/: test_placeholder.py
