[tool.poetry]
name = "docs"
version = "0.0.0"
description = "Version management for docs"
authors = ["Kyle Finley <kyle@finley.sh>"]

[tool.poetry.dependencies]
python = "^3.8"

# uncomment and rename to the name of the top-level package to include in docs
# my-package = { develop = true, path = "../" }
Pygments = "^2.10.0"
Sphinx = "^4.1.1"
recommonmark = "^0.7.1"
sphinx-rtd-theme = "^0.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
